# fbtk

./: .gitignore  Cargo.toml  README.md  final_test.py  pyproject.toml  sample_recipe.yaml  test_ions.py  test_mol.mol  verify_exports.py
.github/workflows/: PyPI.yml
benchmarks/: benchmark_ase_replacements.py  benchmark_builder.py  benchmark_distances.py  benchmark_msd.py  benchmark_msd_v2.py  benchmark_rdf.py  final_benchmark.py
examples/: 03_quickstart.py  06_polymer.py  09_ase_acceleration.py  14_final_validation.py  15_openff_integration.py  16_am1bcc_workflow.py  benchmark_ase_acceleration.py  docs_02_01_quickstart.py  docs_03_01_mixing.py  docs_03_02_polymer_api.py  docs_03_03_polymer_recipe.py  docs_03_03_recipe.yaml  docs_03_04_rdkit_hybrid.py  docs_03_05_from_file.py  docs_04_01_relax_args.py  docs_05_01_ase_rdf.py  docs_05_02_index_query.py  docs_06_01_radonpy.py  quickstart_15lines.py  test_radonpy_smiles.py  verify_rdf_consistency.py
fbtk/: __init__.py  cli.py
src/: lib.rs
src/core/: elements.rs  linalg.rs  mod.rs  msd.rs  rdf.rs  selection.rs
src/core/builder/: config.rs  mod.rs  model.rs  placement.rs  polymer.rs  relax.rs  smiles.rs  system.rs  types.rs
src/core/cli/: analyze.rs  build.rs  mod.rs
src/parsers/: gromacs.rs  lammps.rs  lammps_raw.rs  mod.rs  mol.rs  mol2.rs
src/python/: builder.rs  converter.rs  functions.rs  mod.rs  molecule.rs  system.rs
test_data/: built_system.xyz  cli_out.mol2  debug_dimer.mol2  ethanol.mol  ethanol_bulk.xyz  output.mol2  polymer_test.mol2  polystyrene_10.sdf  polystyrene_10.xyz  py_smiles_out.mol2  quickstart_bulk.xyz  recipe_simple.yaml  smiles_out.mol2  test_cli_build.yaml  tiny.mol2  traj.lammpstrj  traj_triclinic.lammpstrj
tests/: test_phase1.py  test_phase2.py  test_polymer.py  test_ps_rdf.py  test_rdf.py  test_relax.py  test_relax_bulk.py  test_triclinic_full.py  verify_relax_ase.py  verify_relax_rdf.py
